adds spigot mc type + consolidates configuration